# magic-wall

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  SECURITY.md  WORKFLOW.md  install.sh  pyproject.toml
docs/: DECISIONS.md  DEPLOYMENT.md  DESIGN.md  PRODUCT.md  QUALITY_SCORE.md  TESTING.md  raspberry-pi.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/completed/: life-dashboard.md  remove-x-pulse.md  source-mesh-story-discovery.md  world-machine-briefing.md
scripts/: deploy-pi.sh
src/magic_wall/: __init__.py  cli.py  config.py  dashboard.py  generator.py  installer.py  key_discovery.py  models.py  openai_provider.py  prompts.py  server.py  source_preview.py  storage.py  story_discovery.py
src/magic_wall/static/: app.js  index.html  styles.css
tests/: test_config.py  test_dashboard.py  test_generator.py  test_installer.py  test_key_discovery.py  test_prompts.py  test_server.py  test_storage.py  test_story_discovery.py
