[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "magic-wall"
version = "0.1.0"
description = "A Raspberry Pi news-to-art wallpaper appliance powered by OpenAI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Magic Wall contributors" }]
dependencies = [
  "certifi>=2024.0.0",
  "fastapi>=0.115",
  "openai>=1.75.0",
  "uvicorn[standard]>=0.30",
]

[project.urls]
Homepage = "https://github.com/diptobiswas/magic-wall"
Repository = "https://github.com/diptobiswas/magic-wall"
Issues = "https://github.com/diptobiswas/magic-wall/issues"

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[project.scripts]
magic-wall = "magic_wall.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
magic_wall = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
